- Funciona la cache - Implementación de peticiones en hilos - Mensaje de estado